--- a/public/cart.css
+++ b/public/cart.css
@@ -1,6 +1,6 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url('pictures/shop\ back.webp');
+    background-image: url('pictures/dollar.jpg');
     
 }
 #menu{
