--- a/public/cart.css
+++ b/public/cart.css
@@ -1,11 +1,13 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-image: url('pictures/dollar.jpg');
+    background-repeat:round;
     
 }
 #menu{
     width:100%;height: 50px;
 }
+
 .rounded-circle{
     width: 45px; padding:auto ;
 }
@@ -16,3 +18,22 @@ body{
 #blocker{
     width: 100%;height: 50px; background: black;
 }
+#foot{
+    margin-top: 20%;
+
+}
+
+
+
+@media (max-width: 1200px) {
+    #menu {
+        height: 70px;width:100%;
+    }
+    #blocker{
+        width: 100%;height: 70px; background: black;
+    }#foot{
+        margin-top: 55%;
+    
+    }
+    
+  }
