--- a/public/shop.css
+++ b/public/shop.css
@@ -29,3 +29,13 @@ body{
 }
 
 
+
+
+@media (max-width: 1200px) {
+    #menu {
+        height: 70px;width:100%;
+    }
+    #blocker{
+        width: 100%;height: 70px; background: black;
+    }
+  }
